Fix: overflow

--- a/css/main.css
+++ b/css/main.css
@@ -57,7 +57,9 @@ body {
   letter-spacing: 0.01em;
   line-height: 1.6;
   font-weight: 400;
-  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif; }
+  font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  overflow-wrap: break-word;
+  word-wrap: break-word; }
 
 .outer {
   height: 100%;
