--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -54,6 +54,9 @@ body {
   line-height: 1.6;
   font-weight: 400;
   font-family: "Open Sans", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
+  overflow-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .outer{
